# awairelement

./: .gitignore  .pre-commit-config.yaml  GLOSSARY.md  README.md  SCOPE.md  pyproject.toml  restart.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  review.yml
awair/: alerts.py  db.py  fans.py  monitor.py  outdoor.py  poller.py  series.py  solar.py  spikes.py  units.py  web.py
docs/decisions/: 000-adr-template.md
docs/superpowers/specs/: 2026-07-12-voc-threshold-score-gate-design.md
static/: dashboard.js
systemd/: awair-poller.service  awairelement-outdoor.service  awairelement-web.service  awairelement.service
templates/: dashboard.html
tests/: _helpers.py  conftest.py  test_alerts.py  test_db.py  test_db_outdoor.py  test_events.py  test_fans.py  test_monitor.py  test_outdoor.py  test_poller.py  test_series.py  test_solar.py  test_spikes.py  test_units.py  test_web.py
tests/fixtures/: air_data_latest.json
